syntax = "proto3";

package router;

// Domain for routing decision.
message Domain {
    // Type of domain value.
    enum Type {
        // The value is used as is.
        Plain = 0;
        // The value is used as a regular expression.
        Regex = 1;
        // The value is a domain.
        Domain = 2;
    }

    // Domain matching type.
    Type type = 1;

    // Domain value.
    string value = 2;
}

message GeoSite {
    string country_code = 1;
    repeated Domain domain = 2;
}

message GeoSiteList {
    repeated GeoSite entry = 1;
}

// IP for routing decision, in CIDR form.
message CIDR {
    // IP address, should be either 4 or 16 bytes.
    bytes ip = 1;

    // Number of leading ones in the network mask.
    uint32 prefix = 2;
}

message GeoIP {
    string country_code = 1;
    repeated CIDR cidr = 2;
}

message GeoIPList {
    repeated GeoIP entry = 1;
}
